# PartPal

./: .gitignore  .partpal_sample.json  Cargo.toml  README.md  go.mod  partpal_sample.json
internal/distributors/: digikey.go  distributor.go  distributors.go  mouser.go
internal/utils/: bom.go  utils.go
partpal/core/: bom_parser.py  config.py
partpal/distributors/: digikey.py  distributors_base.py  mouser.py
poorpartpal/: README.md  poorpartpal.py
src/: distributor.rs  lib.rs
src/distributors/: mod.rs  mouser.rs
test/distributors/: digikey_test.go  main_test.go  mouser_test.go
test/utils/: bom_test.go
tests/core/: bom_parser_test.py  test_bom.csv  test_bom1.csv  test_bom2.csv  test_bom3.csv  test_bom4.csv  test_bom5.csv  test_bom6.csv
tests/distributor/: digikey_test.py  mouser_test.py
