[package]
name = "partpal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.82"
reqwest = {version="0.12.7", features = ["json"]}
serde = {version="1.0.210", features = ["derive"]}
serde_derive = "1.0.210"
serde_json = "1.0.128"
tokio = {version="1.40.0",features = ["full"]}
